--- a/web/src/locales/vi/form.json
+++ b/web/src/locales/vi/form.json
@@ -54,7 +54,11 @@
       "usernameNoSpaces": "Tên người dùng không được chứa khoảng trắng"
     },
     "success": "Tạo tài khoản thành công, vui lòng kiểm tra email để xác thực",
-    "error": "Tạo tài khoản thất bại"
+    "error": {
+      "userExists": "Người dùng đã tồn tại",
+      "invalidInput": "Vui lòng kiểm tra lại thông tin",
+      "failed": "Đăng ký thất bại. Vui lòng thử lại."
+    }
   },
   "forgotPassword": {
     "title": "Quên mật khẩu?",
