--- a/web/src/locales/vi/metadata.json
+++ b/web/src/locales/vi/metadata.json
@@ -13,5 +13,8 @@
   },
   "verifyEmail": {
     "title": "Xác minh email"
+  },
+  "emailConfirmed": {
+    "title": "Email đã được xác nhận"
   }
 }
